--- a/style.css
+++ b/style.css
@@ -88,13 +88,13 @@ html, body {
   overflow: hidden;
 }
 
-body.homepage {
+.center-content {
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
-  min-height: 100vh;
 }
 
 /* MAKE DESMOS FILL THE WHOLE SPACE */
